Fixed layout issues

--- a/Styles/viewer.css
+++ b/Styles/viewer.css
@@ -61,13 +61,14 @@ html.viewer_active{
 }
 .viewer_div .viewer_side{
     background-color: #efefefde;
-    padding: 3em 2.5em 3em 2.5em;
+    padding: 3em 2.5em 1.2em 2.5em;
     display: flex;
     flex-flow: column;
     
     justify-content: center;
     gap: 0.3em;
     position: relative;
+    /* min-width: 20em; */
 
     animation: 0.5s slide_in var(--fade_anim_time) backwards;
     
@@ -105,6 +106,10 @@ html.viewer_active{
     font-weight: normal;
     border: none;
     border-radius: 0.4em;
+    min-width: max-content;
+    padding-left: 1.3em;
+    padding-right: 1.3em;
+    /* margin-bottom: 2em; */
 }
 .viewer_div .normal_button::before{
     background-image: linear-gradient(90deg, #f19466ff, #f1aa3dff);
@@ -116,15 +121,17 @@ html.viewer_active{
 
 .viewer_div .btn_parent{
     
-    width: 100%;
-
-    
+    width: 100%;    
 
     display: flex;
     justify-content: space-between;
     /* gap: 5em; */
     /* padding: 1em; */
-    margin-top: 0.8em;
+    margin-top: auto;
+    padding-top: 1em;
+}
+.viewer_div .top_div{
+    margin-bottom: auto;
 }
 
 .navigation_button{
@@ -215,7 +222,8 @@ html.viewer_active{
     animation: 0.4s normal_fade_in var(--fade_anim_time) backwards;
     overflow: hidden;
 
-    height: 100%;
+    height: 100vh;
+    height: 100dvh;
 
     position: -webkit-sticky;
     position: sticky;
@@ -331,6 +339,7 @@ html.viewer_active{
 
     width: 100%;
     height: 100%;
+    display: none;
     
     /* transform: translateY(-100%); */
     text-align: center;
